--- a/lib_app/templates/lib_app/book_detail.html
+++ b/lib_app/templates/lib_app/book_detail.html
@@ -7,12 +7,12 @@
     {% endif %}
     <h1>{{ book.title }}</h1>
     {% if book.year %}
-        <p>Год издания {{ book.year }}</p>
+        <p>Год издания: {{ book.year }}</p>
     {% else %}
         <p>Год издания неизвестен</p>
     {% endif %}
     {% if book.publisher %}
-        <p>Издательство {{ book.publisher }}</p>
+        <p>Издательство: {{ book.publisher }}</p>
     {% endif %}
     {% if book.isbn %}
         <p>ISBN: {{ book.isbn }}</p>
