Добавление классов, переход на модель CBV

--- a/lib_app/templates/lib_app/index.html
+++ b/lib_app/templates/lib_app/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}{{ title }}{% endblock %}
+
+{% block content %}
+    <h1>Добро пожаловать!</h1>
+    <p>Это главная страница библиотеки №46. Здесь вы можете найти последние обновления и новости.</p>
+{% endblock %}
