--- a/lib_app/templates/base.html
+++ b/lib_app/templates/base.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     {% include 'include/menu.html' %}
+
+    <div>
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    </div>
     <div class="container mt-4">
         {% block content %}
 
