--- a/lib_app/templates/include/menu.html
+++ b/lib_app/templates/include/menu.html
@@ -7,6 +7,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Главная</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'book_list' %}">Книги</a>
                 </li>
                 <li class="nav-item">
@@ -14,6 +17,18 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'about' %}">О нас</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Войти</a>
+                </li>
+                 <li class="nav-item">
+                     <form action="{% url 'logout' %}" method="post">
+                         {% csrf_token %}
+                         <button type="submit" class="btn btn-danger">Выйти</button>
+                     </form>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'register' %}">Зарегистрироваться</a>
                 </li>
             </ul>
         </div>
