--- a/lib_app/templates/lib_app/book_add.html
+++ b/lib_app/templates/lib_app/book_add.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+  {% endfor %}
+{% endif %}
+
 {% block content %}
     <form method="post" class="mt-4">
         {% csrf_token %}
