--- a/user_app/templates/user_app/login.html
+++ b/user_app/templates/user_app/login.html
@@ -11,3 +11,21 @@
     </form>
     <a href="{% url 'register' %}" class="btn btn-secondary mt-3">Нет аккаунта? Зарегистрироваться</a>
 {% endblock %}
+
+{% if form.non_field_errors %}
+  <div class="alert alert-danger">
+    {% for error in form.non_field_errors %}
+      {{ error }}
+    {% endfor %}
+  </div>
+{% endif %}
+
+{% if form.errors %}
+  <ul>
+    {% for field in form %}
+      {% for error in field.errors %}
+        <li>{{ field.label }}: {{ error }}</li>
+      {% endfor %}
+    {% endfor %}
+  </ul>
+{% endif %}
