--- a/lib_app/templates/lib_app/book_detail.html
+++ b/lib_app/templates/lib_app/book_detail.html
@@ -22,8 +22,14 @@
     {% endif %}
     Выдана {{ book.times_of_issued }} раз<p>
     {% if book.available %}
-        <p>Доступна для выдачи</p>
+        <span class="text-success">Доступна</span>
+        {% if user.is_authenticated %}
+            <form method="post" action="{% url 'add_to_cart' book.id %}" style="display: inline;">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-sm btn-primary">В корзину</button>
+            </form>
+        {% endif %}
     {% else %}
-        <p>Выдана</p>
+        <span class="text-danger">Выдана</span>
     {% endif %}
 {% endblock %}
