--- a/lib_app/templates/lib_app/cart.html
+++ b/lib_app/templates/lib_app/cart.html
@@ -16,7 +16,7 @@
     {% endfor %}
     </ul>
     {% if user.is_staff %}
-        <p><em>Админ может выдать эти книги через админку.</em></p>
+        <p><em>Персонал может выдать эти книги через админку.</em></p>
     {% endif %}
 {% else %}
     <p>Корзина пуста.</p>
