--- a/lib_app/templates/base.html
+++ b/lib_app/templates/base.html
@@ -7,16 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    {% if user.is_staff %}
-        <p>Персонал</p>
-        {% include 'include/menu_staff.html' %}
-    {% elif user.is_authenticated %}
-        <p>Зарегистрирован</p>
-        {% include 'include/menu_registred.html' %}
-    {% else %}
-        <p>Гость</p>
-        {% include 'include/menu_guest.html' %}
-    {% endif %}
+    <!-- Строка меню -->
+    {% include 'include/menu.html' %}
 
     <div>
         {% if messages %}
