--- a/lib_app/templates/include/menu.html
+++ b/lib_app/templates/include/menu.html
@@ -5,78 +5,17 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <!-- Основные пункты слева -->
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'index' %}">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'book_list' %}">Книги</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'my_borrowed_books' %}">Мои книги</a>
-                </li>
-                {% if perms.lib_app.add_book %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'book_add' %}">Добавить книгу</a>
-                    </li>
-                {% endif %}
-                {% if user.is_staff %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'borrowing_users_list' %}">Выданные книги</a>
-                    </li>
-                {% endif %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">О нас</a>
-                </li>
-            </ul>
-
-            <!-- Пункты справа: авторизация / профиль -->
-            <ul class="navbar-nav ms-auto">
-                {% if user.is_authenticated %}
-                    <!-- Имя пользователя -->
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">
-                            {{ user.full_name }}
-                        </a>
-                    </li>
-
-                    <!-- Выпадающее меню для админа -->
-                    {% if user.is_staff %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Админка
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="adminDropdown">
-                                <li><a class="dropdown-item" href="{% url 'book_list' %}">Книги</a></li>
-                                <li><a class="dropdown-item" href="{% url 'author_list' %}">Авторы</a></li>
-                                <li><a class="dropdown-item" href="{% url 'publisher_list' %}">Издательства</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{% url 'users_with_cart' %}">Пользователи с корзинами</a></li>
-                                <li><a class="dropdown-item" href="{% url 'admin:index' %}">Django Admin</a></li>
-                            </ul>
-                        </li>
-                    {% endif %}
-
-                    <!-- Кнопка выхода -->
-                    <li class="nav-item">
-                        <form method="post" action="{% url 'logout' %}" class="d-flex align-items-center h-100">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-link nav-link p-0 text-white text-decoration-none"
-                                    style="line-height: 1.5; vertical-align: baseline;">
-                                Выйти
-                            </button>
-                        </form>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Войти</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Регистрация</a>
-                    </li>
-                {% endif %}
-            </ul>
+            <!-- Пункты меню для разных категорий пользователей -->
+            {% if user.is_staff %}
+                <!-- Персонал -->
+                {% include 'include/menu_staff.html' %}
+            {% elif user.is_authenticated %}
+                <!-- Зарегистрирован -->
+                {% include 'include/menu_registred.html' %}
+            {% else %}
+                <!-- Гость -->
+                {% include 'include/menu_guest.html' %}
+            {% endif %}
         </div>
     </div>
 </nav>
