--- a/lib_app/templates/include/menu_registred.html
+++ b/lib_app/templates/include/menu_registred.html
@@ -10,6 +10,9 @@
         <a class="nav-link" href="{% url 'my_borrowed_books' %}">Мои книги</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" href="{% url 'view_cart' %}">Корзина</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="{% url 'about' %}">О нас</a>
     </li>
 </ul>
