--- a/lib_app/templates/include/menu_staff.html
+++ b/lib_app/templates/include/menu_staff.html
@@ -2,7 +2,7 @@
 <ul class="navbar-nav me-auto">
     <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Главная</a></li>
     <li><a class="nav-link" href="{% url 'users_with_cart' %}">Выдать книги</a></li>
-    <li class="nav-item"><a class="nav-link" href="{% url 'borrowing_users_list' %}">Принять книги</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'borrowing_users_list' %}">Вернуть книги</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">О нас</a></li>
 </ul>
 
