--- a/user_app/templates/user_app/user_edit.html
+++ b/user_app/templates/user_app/user_edit.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Редактировать пользователя: {{ object.full_name }}</h2>
+    <h2>Редактирование учётной записи {{ object.full_name }}</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
