--- a/lib_app/templates/lib_app/cart.html
+++ b/lib_app/templates/lib_app/cart.html
@@ -48,5 +48,5 @@
     <p>Корзина пуста.</p>
 {% endif %}
 
-<a href="{% url 'book_list' %}" class="btn btn-secondary">← Назад к каталогу</a>
+<a href="{% url 'users_with_cart' %}" class="btn btn-secondary">← Назад к списку</a>
 {% endblock %}
